<resources>
    <string name="app_name">Firebase Testing</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="default_web_client_id">505355264538-1naph8oiqkndpgg9cof4alftjv05pvt0.apps.googleusercontent.com</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="firebase_auth_demo">Firebase Auth Demo</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_btn">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
</resources>